# duckdb_scalarfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  mkdocs.yml
.github/workflows/: MainDistributionPipeline.yml
docs/: index.md  scalarfs-implementation-plan.md  scalarfs-spec.md
docs/functions/: decoding.md  encoding.md
docs/getting-started/: installation.md  quickstart.md
docs/issues/: 001-copy-to-bypass.md
docs/protocols/: data-blob.md  data-uri.md  data-varchar.md  overview.md  pathvariable.md  variable.md
docs/reference/: api.md  limitations.md
docs/use-cases/: examples.md
src/: data_uri_filesystem.cpp  decompress_filesystem.cpp  memory_file_handle.cpp  pathvariable_filesystem.cpp  scalarfs_extension.cpp  scalarfs_functions.cpp  variable_copy_function.cpp  variable_filesystem.cpp
src/include/: data_uri_filesystem.hpp  decompress_filesystem.hpp  memory_file_handle.hpp  pathvariable_filesystem.hpp  pathvariable_modifiers.hpp  scalarfs_extension.hpp  scalarfs_functions.hpp  variable_copy_function.hpp  variable_filesystem.hpp
test/sql/: data_blob.test  data_uri.test  data_varchar.test  decompress.test  pathvariable_advanced.test  pathvariable_glob.test  pathvariable_modifiers.test  pathvariable_read.test  pathvariable_tmpfile.test  pathvariable_write.test  scalarfs_functions.test  stress_and_security.test  variable_format.test  variable_glob.test  variable_read.test  variable_tmpfile.test  variable_write.test
